fixed post_api_keys sql reqs & view layout

--- a/views/set_api_keys.pug
+++ b/views/set_api_keys.pug
@@ -9,12 +9,12 @@ block content
     table
       tr
         td(width="120pt")
-          | Key:
+          | <em>API Key:</em>
         td
           input(type="text", id="key", name="key", placeholder="... API key ...")
       tr
         td(width="120pt")
-          | Key Secret:
+          | <em>API Key Secret:</em>
         td
           input(type="text", id="key_secret", name="key_secret", placeholder="... API key secret ...")
 
@@ -22,7 +22,7 @@ block content
       table
         tr
           td(width="120pt")
-            | SubAccount name:
+            | <em>SubAccount name:</em>
           td
             input(type="text", id="subaccount", name="subaccount", placeholder="... SubAccount name ...", hidden="true")
 
@@ -33,3 +33,4 @@ block content
     script(type="text/javascript", src="/javascripts/set_exchange_name.js")
     script(type="text/javascript", src="/javascripts/disable_subaccount.js")
     script(type="text/javascript", src="/javascripts/set_param_values.js")
+
