--- a/views/set_api_keys.pug
+++ b/views/set_api_keys.pug
@@ -27,9 +27,9 @@ block content
             input(type="text", id="subaccount", name="subaccount", placeholder="... SubAccount name ...", hidden="true")
 
     input(id="exchange", type="text", name="exchange", value="", hidden="true")
-    input(type="submit", value="Submit", onClick="document.getElementById['exchange'].value=getExchange();")
-    input(type="button", value="Cancel", onClick="window.location='https://localhost'")
-    input(type="button", value="Delete from DB", onClick="url='https://localhost/delete_from_db?exchange='+getExchange()+'&key='+getKey(); window.location=url")
+    input(type="submit", value="Submit", onClick="document.getElementById('exchange').value=getExchange();")
+    input(type="button", value="Cancel", onClick="document.location.href='https://localhost'")
+    input(type="button", value="Delete from DB", onClick="doDelete();")
     script(type="text/javascript", src="/javascripts/set_exchange_name.js")
     script(type="text/javascript", src="/javascripts/disable_subaccount.js")
     script(type="text/javascript", src="/javascripts/set_param_values.js")
