changed body onLoad for getting AND updating exchange name

--- a/views/setkeys_layout.pug
+++ b/views/setkeys_layout.pug
@@ -7,5 +7,5 @@ html
     script(type="text/javascript", src="/javascripts/set_api_key.js")
     script(type="text/javascript", src="/javascripts/set_param_values.js")
 
-  body(onLoad="getExchange();")
+  body(onLoad="getExchange(); updateExchangeName(getExchange()); ")
     block content
