--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,8 @@
 doctype 1.1
-html
+html(lang="fr")
   head
+    meta(name="viewport", content="width=device-width, initial-scale=1")
+    meta(charset="utf-8")
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
